force-app/main/default/objects/Dialpad__Dialpad_Activity_Log__c/Dialpad__Dialpad_Activity_Log__c.object-meta.xml
<CustomObject>
    <label>Dialpad Activity Log</label>
    <nameField>
        <displayFormat>DPA-{00000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dialpad Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>