force-app/main/default/objects/Dialpad__Dialpad_Activity_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Dialpad Activity Logs</relationshipLabel>
    <relationshipName>Dialpad_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>