force-app/main/default/objects/Dialpad__Dialpad_Activity_Log__c/fields/Dialpad__Dialpad_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Dialpad_Activity_Type__c</fullName>
    <label>Dialpad Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dialing</fullName>
            </value>
            <value>
                <fullName>List Update</fullName>
            </value>
            <value>
                <fullName>Record(s) Removed</fullName>
            </value>
            <value>
                <fullName>Record(s) Added</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>