force-app/main/default/objects/Dialpad__Dialpad_Activity_Log__c/fields/Dialpad__Subject__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Subject__c</fullName>
    <label>Subject</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>